# project-scout

./: .gitignore  AGENTS.md  BACKLOG.md  DEVLOG.md  HANDOFF.md  README.md  project-scout-report.json  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  report-schema.md  skill-repository-strategy.md
docs/case-studies/: 2026-05-business-opportunity-skill-scan.md  2026-05-web-access-analysis.md  2026-06-agentux-skill-quality-dogfood.md  project-scout-dogfood-brief-templates.md
docs/integrations/: conductor-boundary.md
docs/milestones/: m1-local-prior-art-gate.md  m2-skill-quality-gate.md  m3-source-reliability-gate.md  m4-skill-pack-due-diligence-gate.md  m5-release-hardening.md  m6-research-quality-harness.md  m7-skill-experience-gate.md
docs/patterns/: cross-agent-skill-compatibility.md  search-routing-pattern.md  skill-experience-library.md
examples/: business-opportunity-skill-brief.json  business-opportunity-skill-candidates.json  business-opportunity-skill-report.json  deepseek-coding-agent-desktop-brief.json  deepseek-coding-agent-desktop-candidates.json  deepseek-coding-agent-desktop-report.json  deepseek-tui-desktop-brief.json  deepseek-tui-desktop-candidates.json  deepseek-tui-desktop-report.json  project-scout-report.json
scripts/: bootstrap-dev.sh  check-agentux-dogfood-artifacts.py  install-skill.sh  smoke.sh  wheel-smoke.sh
tests/: test_agentux_artifact_check.py  test_cli.py  test_core_report.py  test_discovery_brief.py  test_importers.py  test_prior_art_scout_skill.py  test_release_readiness.py  test_research_quality_harness.py
(+73 files in other folders)
