[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-scout"
version = "0.1.0"
description = "Local-first prior-art discovery CLI and Python library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
project-scout = "project_scout.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
